Corrección de nombre

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>DevOps Professional</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -79,7 +79,7 @@ nav > ul > li {
  
 
 <header>
-  <h2>Versionamiento de código con GitHub</h2>
+  <h2>DevOps Professional</h2>
 </header>
 <div id="body">
   <section>
